Added style css file

--- a/src/html/clovermain.html
+++ b/src/html/clovermain.html
@@ -1,9 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
-
+		<title>CloverWeb</title>
+		<meta name="description" content="">
+		<link rel="stylesheet" href="../css/stylemain.css">
 	</head>
-
 	<body>
-		
+		<h1>Hello <i>nerds</i>!<hr></h1>
 	</body>
 </html>
