--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>CloverWeb</title>
 		<meta name="description" content="">
-		<link rel="stylesheet" href="src/css/stylemain.css">
+		<link rel="stylesheet" href="luckycloverdev.github.io/src/css/stylemain.css">
 	</head>
 	<body>
 		<h1>Hello <i>nerds</i>!<hr></h1>
