--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		<link rel="stylesheet" href="luckycloverdev.github.io/src/css/stylemain.css">
 	</head>
 	<body>
-		<h1>Hello <i>nerds</i>!<hr></h1>
+		<h1>
+			Hello <i>nerds</i>!
+			<hr width="90%">
+		</h1>
 	</body>
 </html>
