--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 			Hello <i>nerds</i>!
 			<hr width="90%">
 		</h1>
+		<h1>
+			This is a work in progress, move along!
+		</h1>
 	</body>
 </html>
