--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 	</head>
 	<body>
 		<h1>
-			Hello <i>nerds</i>!
-			<hr width="90%">
+			Hello <i>nerds</i>!<hr width="90%">
 		</h1>
 		<h1>
 			This is a work in progress, move along!
