--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
 		<link rel="stylesheet" href="luckycloverdev.github.io/src/css/stylemain.css">
 	</head>
 	<body>
-		<h1>
-			Hello <i>nerds</i>!<hr width="90%">
-		</h1>
-		<h1>
-			This is a work in progress, move along!
-		</h1>
+		<h1>Hello <i>nerds</i>!<hr width="90%"></h1>
+		<h1>This is a work in progress, move along!</h1>
 	</body>
 </html>
