--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 	<head>
 		<title>CloverWeb</title>
 		<meta name="description" content="">
-		<link rel="stylesheet" href="luckycloverdev.github.io/src/css/stylemain.css">
+		<link type="text/css" rel="stylesheet" href="luckycloverdev.github.io/src/css/stylemain.css">
 	</head>
 	<body>
-		<h1>Hello <i>nerds</i>!<hr width="90%"></h1>
-		<h1>This is a work in progress, move along!</h1>
+		<h1>
+			Hello <i>nerds</i>!<hr width="90%">
+		</h1>
+		<h1>
+			This is a work in progress, move along!
+		</h1>
 	</body>
 </html>
