--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>CloverWeb</title>
 		<meta name="description" content="">
-		<link type="text/css" rel="stylesheet" href="luckycloverdev.github.io/src/css/stylemain.css">
+		<link type="text/css" rel="stylesheet" href="/luckycloverdev.github.io/src/css/stylemain.css">
 	</head>
 	<body>
 		<h1>
