--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>CloverWeb</title>
 		<meta name="description" content="">
-		<link rel="stylesheet" type="text/css" href="src/css/stylemain.css">
+		<link rel="stylesheet" type="text/css" href="/src/css/stylemain.css">
 	</head>
 	<body>
 		<h1>
