--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>CloverWeb</title>
 		<meta name="description" content="">
+		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="/LuckyCloverDev.github.io/src/css/stylemain.css">
 	</head>
 	<body>
@@ -12,5 +13,6 @@
 		<h1>
 			This is a work in progress, move along!
 		</h1>
+		<h2><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Check this out!</a></h2>
 	</body>
 </html>
