--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<h1>
 			This is a work in progress, move along!
 		</h1>
-		<h2><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Check this out!</a></h2>
+		<h2>
+			<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Check this out!</a>
+		</h2>
 	</body>
 </html>
