--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>CloverWeb</title>
 		<meta name="description" content="">
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="LuckyCloverDev.github.io/src/css/stylemain.css">
+		<link rel="stylesheet" type="text/css" href="/LuckyCloverDev.github.io/src/css/stylemain.css">
 	</head>
 	<body>
 		<h1>
