Format index.html

--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>CloverWeb</title>
-		<meta name="description" content="">
-		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="/luckycloverdev.github.io/src/css/stylemain.css">
-	</head>
-	<body>
-		<h1>
-			Hello <i>nerds</i>!<hr width="90%">
-		</h1>
-		<h1>
-			This is a work in progress, move along!
-		</h1>
-		<h2>
-			<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Check this out!</a>
-		</h2>
-	</body>
+
+<head>
+	<title>CloverWeb</title>
+	<meta name="description" content="">
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="/luckycloverdev.github.io/src/css/stylemain.css">
+</head>
+
+<body>
+	<h1>
+		Hello <i>nerds</i>!
+		<hr width="90%">
+	</h1>
+	<h1>
+		This is a work in progress, move along!
+	</h1>
+	<h2>
+		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Check this out!</a>
+	</h2>
+</body>
+
 </html>
