--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
+	<meta charset="utf-8">
 	<title>CloverWeb</title>
 	<meta name="description" content="">
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="/luckycloverdev.github.io/src/css/stylemain.css">
+	<link rel="stylesheet" type="text/css" href="src/css/stylemain.css">
 </head>
 
 <body>
