--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>CloverWeb</title>
 	<meta name="description" content="">
-	<link rel="stylesheet" type="text/css" href="src/css/stylemain.css">
+	<link rel="stylesheet" type="text/css" href="/src/css/stylemain.css">
 </head>
 
 <body>
