--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<hr width="90%">
 	</h1>
 	<h1>
-		This is a work in progress, move along!
+		This is a work in progress, move along!<br>>:)
 	</h1>
 	<h2>
 		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Check this out!</a>
