--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>CloverWeb</title>
-	<meta name="description" content="">
+	<meta name="description" content="The official site of Lucky Clover">
 	<link rel="stylesheet" type="text/css" href="/src/css/stylemain.css">
 </head>
 
