--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<h2>
 		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Check this out!</a>
 	</h2>
+	<img src="/src/images/ProfileBG.png">
 </body>
 
 </html>
