Auto fit images to window

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-	<img src="/src/images/ProfileBG.png">
+	<div class="imgbox">
+		<img src="/src/images/ProfileBG.png">
+	</div>
 	<h1>
 		Hello <i>nerds</i>!
 		<hr width="90%">
@@ -20,7 +22,9 @@
 	<h2>
 		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Check this out!</a>
 	</h2>
-	<img src="/src/images/ProfileBG.png">
+	<div class="imgbox">
+		<img src="/src/images/ProfileBG.png">
+	</div>
 </body>
 
 </html>
