--- a/index.html
+++ b/index.html
@@ -9,22 +9,20 @@
 </head>
 
 <body>
-	<div class="imgbox">
+	<section class="banner">
+		<div class = "banner-inner">
+			<h1>
+				Hello <i>nerds</i>!
+			</h1>
+		</div>
 		<img src="/src/images/ProfileBG.png">
-	</div>
-	<h1>
-		Hello <i>nerds</i>!
-		<hr width="90%">
-	</h1>
+	</section>
 	<h1>
 		This is a work in progress, move along!<br>>:)
 	</h1>
 	<h2>
 		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Check this out!</a>
 	</h2>
-	<div class="imgbox">
-		<img src="/src/images/ProfileBG.png">
-	</div>
 </body>
 
 </html>
