--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 	<section class="banner">
 		<div class="banner-inner">
 			<h1>
-				Hello <i>nerds</i>!
+				Welcome to CloverWeb!
 			</h1>
+			<h3>
+				Official Site of Lucky Clover
+			</h3>
 		</div>
 	</section>
 	<h1>
