--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>CloverWeb</title>
-	<meta name="description" content="The official site of Lucky Clover">
+	<meta name="description" content="The Official Site of Lucky Clover">
 	<link rel="stylesheet" type="text/css" href="/src/css/stylemain.css">
 </head>
 
@@ -12,7 +12,7 @@
 	<section class="banner">
 		<div class="banner-inner">
 			<h1>
-				Welcome to CloverWeb!
+				CloverWeb
 			</h1>
 			<h3>
 				Official Site of Lucky Clover
