--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 			<h3>
 				Official Site of Lucky Clover
 			</h3>
+			<div class=".btn">
+				<h2>
+					<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Check this out!</a>
+				</h2>
+			</div>
 		</div>
 	</section>
 	<h1>
