--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
 			<h3>
 				Official Site of Lucky Clover
 			</h3>
-			<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn">
-				Check this out!
-			</a>
+			<div>
+				<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn">
+					Check this out!
+				</a>
+				<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn">
+					Check this out!
+				</a>
+				<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn">
+					Check this out!
+				</a>
+			</div>
 		</div>
 	</section>
 	<h1>
