Created btn-line css class

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<h3>
 				Official Site of Lucky Clover
 			</h3>
-			<div>
+			<div class="btn-line">
 				<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn">
 					Check this out!
 				</a>
