--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 				Official Site of Lucky Clover
 			</h3>
 			<div class="btn-line">
-				<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn">
-					Check this out!
+				<a href="https://www.instagram.com/lucky.clover.arts/" class="btn">
+					Instagram
 				</a>
-				<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn">
-					Check this out!
+				<a href="https://www.twitch.tv/lucky_clover03" class="btn">
+					Twitch
 				</a>
-				<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn">
-					Check this out!
+				<a href="https://twitter.com/LuckyCloverDev" class="btn">
+					Twitter
 				</a>
 			</div>
 		</div>
