--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
 				Official Site of Lucky Clover
 			</h3>
 			<div class="btn-line">
+				<a href="https://github.com/LuckyCloverDev" class="btn">
+					Github
+				</a>
 				<a href="https://www.instagram.com/lucky.clover.arts/" class="btn">
 					Instagram
+				</a>
+				<a href="https://luckycloverdev.itch.io/" class="btn">
+					Itch.io
 				</a>
 				<a href="https://www.patreon.com/luckycloverdev" class="btn">
 					Patreon
