--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+	<div class="navbar">
+		<a class="active">Home</a>
+		<a>Commissions</a>
+		<a>About</a>
+	</div>
 	<section class="banner">
 		<div class="banner-inner">
 			<h1>
