--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					Instagram
 				</a>
 				<a href="https://luckycloverdev.itch.io/" class="btn">
-					Itch.io
+					Itch
 				</a>
 				<a href="https://www.patreon.com/luckycloverdev" class="btn">
 					Patreon
@@ -45,7 +45,7 @@
 		</div>
 	</section>
 	<h1>
-		This is a work in progress, move along!<br>>:)<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>content test
+		This is a work in progress, move along!<br>>:)
 	</h1>
 </body>
 
