--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<a>Commissions</a>
 		<a>About</a>
 	</div>
-	
+
 	<section class="banner">
 		<div class="banner-inner">
 			<h1>
@@ -31,7 +31,7 @@
 					Instagram
 				</a>
 				<a href="https://luckycloverdev.itch.io/" class="btn">
-					Itch
+					Itch.io
 				</a>
 				<a href="https://www.patreon.com/luckycloverdev" class="btn">
 					Patreon
