--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="navbar">
 		<a class="active">Home</a>
 		<a>Commissions</a>
-		<a>About</a>
+		<a href="/src/html/about.html">About</a>
 	</div>
 
 	<section class="banner">
