Update navbar links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="navbar">
 		<a class="active">Home</a>
-		<a>Commissions</a>
+		<a href="/src/html/comm-info.html">Commissions</a>
 		<a href="/src/html/about.html">About</a>
 	</div>
 
