--- a/src/html/about.html
+++ b/src/html/about.html
@@ -10,8 +10,8 @@
 
 <body>
 	<div class="navbar">
-		<a>Home</a>
-		<a>Commissions</a>
+		<a href="../../index.html">Home</a>
+		<a href="comm-info.html">Commissions</a>
 		<a class="active">About</a>
 	</div>
 </body>
