Reformat to improve link readability

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 	<div class="navbar">
 		<a class="active">Home</a>
-		<a href="/src/html/comm-info.html">Commissions</a>
-		<a href="/src/html/about.html">About</a>
+		<a href="/comm-info/">Commissions</a>
+		<a href="/about/">About</a>
 	</div>
 
 	<section class="banner">
