--- a/about/index.html
+++ b/about/index.html
@@ -10,9 +10,9 @@
 
 <body>
 	<div class="navbar">
-		<a href="../../index.html">Home</a>
-		<a class="active">Commissions</a>
-		<a href="about.html">About</a>
+		<a href="../../">Home</a>
+		<a href="../comm-info">Commissions</a>
+		<a class="active">About</a>
 	</div>
 </body>
 
