--- a/comm-info/index.html
+++ b/comm-info/index.html
@@ -10,9 +10,9 @@
 
 <body>
 	<div class="navbar">
-		<a href="../../index.html">Home</a>
-		<a href="comm-info.html">Commissions</a>
-		<a class="active">About</a>
+		<a href="../../">Home</a>
+		<a class="active">Commissions</a>
+		<a href="../about">About</a>
 	</div>
 </body>
 
