--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
 				Official Site of Lucky Clover
 			</h3>
 			<div class="btn-line">
-				<a href="https://github.com/LuckyCloverDev" class="btn">
+				<a href="https://github.com/LuckyCloverDev" target="_blank" class="btn">
 					Github
 				</a>
-				<a href="https://www.instagram.com/lucky.clover.arts/" class="btn">
+				<a href="https://www.instagram.com/lucky.clover.arts/" target="_blank" class="btn">
 					Instagram
 				</a>
-				<a href="https://luckycloverdev.itch.io/" class="btn">
+				<a href="https://luckycloverdev.itch.io/" target="_blank" class="btn">
 					Itch.io
 				</a>
-				<a href="https://www.patreon.com/luckycloverdev" class="btn">
+				<a href="https://www.patreon.com/luckycloverdev" target="_blank" class="btn">
 					Patreon
 				</a>
-				<a href="https://www.twitch.tv/lucky_clover03" class="btn">
+				<a href="https://www.twitch.tv/lucky_clover03" target="_blank" class="btn">
 					Twitch
 				</a>
-				<a href="https://twitter.com/LuckyCloverDev" class="btn">
+				<a href="https://twitter.com/LuckyCloverDev" target="_blank" class="btn">
 					Twitter
 				</a>
 			</div>
