Add banner to all pages

--- a/about/index.html
+++ b/about/index.html
@@ -14,6 +14,36 @@
 		<a href="../comm-info">Commissions</a>
 		<a class="active">About</a>
 	</div>
+	<section class="banner">
+		<div class="banner-inner">
+			<h1>
+				CloverWeb
+			</h1>
+			<h3>
+				Official Site of Lucky Clover
+			</h3>
+			<div class="btn-line">
+				<a href="https://github.com/LuckyCloverDev" target="_blank" class="btn">
+					Github
+				</a>
+				<a href="https://www.instagram.com/lucky.clover.arts/" target="_blank" class="btn">
+					Instagram
+				</a>
+				<a href="https://luckycloverdev.itch.io/" target="_blank" class="btn">
+					Itch.io
+				</a>
+				<a href="https://www.patreon.com/luckycloverdev" target="_blank" class="btn">
+					Patreon
+				</a>
+				<a href="https://www.twitch.tv/lucky_clover03" target="_blank" class="btn">
+					Twitch
+				</a>
+				<a href="https://twitter.com/LuckyCloverDev" target="_blank" class="btn">
+					Twitter
+				</a>
+			</div>
+		</div>
+	</section>
 </body>
 
 </html>
