Add contact page

--- a/comm-info/index.html
+++ b/comm-info/index.html
@@ -12,6 +12,7 @@
 	<div class="navbar">
 		<a href="../../">Home</a>
 		<a class="active">Commissions</a>
+		<a href="../contact-me">Contact</a>
 		<a href="../about">About</a>
 	</div>
 	<section class="banner">
