--- a/about/index.html
+++ b/about/index.html
@@ -12,6 +12,7 @@
 	<div class="navbar">
 		<a href="../../">Home</a>
 		<a href="../comm-info">Commissions</a>
+		<a href="../contact-me">Contact</a>
 		<a class="active">About</a>
 	</div>
 	<section class="banner">
