--- a/contact-me/index.html
+++ b/contact-me/index.html
@@ -3,17 +3,17 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>CloverWeb</title>
+	<title>CloverWeb - About</title>
 	<meta name="description" content="The Official Site of Lucky Clover">
-	<link rel="stylesheet" type="text/css" href="/src/css/stylemain.css">
+	<link rel="stylesheet" type="text/css" href="../src/css/stylemain.css">
 </head>
 
 <body>
 	<div class="navbar">
-		<a class="active">Home</a>
-		<a href="/comm-info/">Commissions</a>
-		<a href="../contact-me">Contact</a>
-		<a href="/about/">About</a>
+		<a href="../../">Home</a>
+		<a href="../comm-info">Commissions</a>
+		<a class="active">Contact</a>
+		<a href="../about">About</a>
 	</div>
 	<section class="banner">
 		<div class="banner-inner">
@@ -45,9 +45,6 @@
 			</div>
 		</div>
 	</section>
-	<h1>
-		This is a work in progress, move along!<br>>:)
-	</h1>
 </body>
 
 </html>
