--- a/about/index.html
+++ b/about/index.html
@@ -45,6 +45,20 @@
 			</div>
 		</div>
 	</section>
+	<div class="title">
+		<h1>
+			About Me
+		</h1>
+	</div>
+	<div class="page-content">
+		<h2>
+			Name: Jeremiah Dobes<br>
+			Alias: Lucky Clover<br>
+			Company: HouseFire Studios<br>
+			<br>
+			Bio:
+		</h2>
+	</div>
 </body>
 
 </html>
