--- a/about/index.html
+++ b/about/index.html
@@ -50,8 +50,8 @@
 			About Me
 		</h1>
 	</div>
-	<div>
-		<h2 class="page-content">
+	<div class="page-content">
+		<h2>
 			Name: Jeremiah Dobes<br>
 			Alias: Lucky Clover<br>
 			Company: HouseFire Studios<br>
