Added page for the studio

--- a/contact-me/index.html
+++ b/contact-me/index.html
@@ -12,6 +12,7 @@
 	<div class="navbar">
 		<a href="../../">Home</a>
 		<a href="../comm-info">Commissions</a>
+		<a href="/housefire-studios/">Housefire Studios</a>
 		<a class="active">Contact</a>
 		<a href="../about">About</a>
 	</div>
