--- a/housefire-studios/index.html
+++ b/housefire-studios/index.html
@@ -12,9 +12,9 @@
 	<div class="navbar">
 		<a href="../../">Home</a>
 		<a href="../comm-info">Commissions</a>
-		<a href="/housefire-studios/">Housefire Studios</a>
-		<a href="../contact-me">Contact</a>
-		<a class="active">About</a>
+		<a class="active">Housefire Studios</a>
+		<a href="../contact-me/">Contact</a>
+		<a href="../about">About</a>
 	</div>
 	<section class="banner">
 		<div class="banner-inner">
@@ -46,20 +46,6 @@
 			</div>
 		</div>
 	</section>
-	<div class="title">
-		<h1>
-			About Me
-		</h1>
-	</div>
-	<div class="page-content">
-		<h3>
-			Name: Jeremiah Dobes<br>
-			Alias: Lucky Clover<br>
-			Company: HouseFire Studios<br>
-			<br>
-			Bio:
-		</h3>
-	</div>
 </body>
 
 </html>
