--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	<div class="navbar">
 		<a class="active">Home</a>
 		<a href="/comm-info/">Commissions</a>
-		<a href="../contact-me">Contact</a>
+		<a href="/housefire-studios/">Housefire Studios</a>
+		<a href="/contact-me/">Contact</a>
 		<a href="/about/">About</a>
 	</div>
 	<section class="banner">
