--- a/housefire-studios/index.html
+++ b/housefire-studios/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>CloverWeb - About</title>
+	<title>CloverWeb - Housefire Studios</title>
 	<meta name="description" content="The Official Site of Lucky Clover">
 	<link rel="stylesheet" type="text/css" href="../src/css/stylemain.css">
 </head>
@@ -44,6 +44,13 @@
 					Twitter
 				</a>
 			</div>
+		</div>
+	</section>
+	<section>
+		<div>
+			<h1>
+				Housefire Studios
+			</h1>
 		</div>
 	</section>
 </body>
