--- a/housefire-studios/index.html
+++ b/housefire-studios/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>CloverWeb - Housefire Studios</title>
 	<meta name="description" content="The Official Site of Lucky Clover">
-	<link rel="stylesheet" type="text/css" href="../src/css/stylemain.css">
+	<link rel="stylesheet" type="text/css" href="/studio-style.css">
 </head>
 
 <body>
@@ -16,14 +16,11 @@
 		<a href="../contact-me/">Contact</a>
 		<a href="../about">About</a>
 	</div>
-	<section class="banner">
-		<div class="banner-inner">
+	<section class="studio-banner">
+		<div class="studio-banner-inner">
 			<h1>
-				CloverWeb
+				Housefire Studios
 			</h1>
-			<h3>
-				Official Site of Lucky Clover
-			</h3>
 			<div class="btn-line">
 				<a href="https://github.com/LuckyCloverDev" target="_blank" class="btn">
 					Github
@@ -44,13 +41,6 @@
 					Twitter
 				</a>
 			</div>
-		</div>
-	</section>
-	<section>
-		<div>
-			<h1>
-				Housefire Studios
-			</h1>
 		</div>
 	</section>
 </body>
