--- a/housefire-studios/index.html
+++ b/housefire-studios/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>CloverWeb - Housefire Studios</title>
 	<meta name="description" content="The Official Site of Lucky Clover">
-	<link rel="stylesheet" type="text/css" href="/studio-style.css">
+	<link rel="stylesheet" type="text/css" href="../src/css/studio-style.css">
 </head>
 
 <body>
