--- a/housefire-studios/index.html
+++ b/housefire-studios/index.html
@@ -16,8 +16,8 @@
 		<a href="../contact-me/">Contact</a>
 		<a href="../about">About</a>
 	</div>
-	<section class="studio-banner">
-		<div class="studio-banner-inner">
+	<section class="banner">
+		<div class="banner-inner">
 			<h1>
 				Housefire Studios
 			</h1>
