--- a/housefire-studios/index.html
+++ b/housefire-studios/index.html
@@ -22,23 +22,8 @@
 				Housefire Studios
 			</h1>
 			<div class="btn-line">
-				<a href="https://github.com/LuckyCloverDev" target="_blank" class="btn">
-					Github
-				</a>
-				<a href="https://www.instagram.com/lucky.clover.arts/" target="_blank" class="btn">
-					Instagram
-				</a>
-				<a href="https://luckycloverdev.itch.io/" target="_blank" class="btn">
-					Itch.io
-				</a>
-				<a href="https://www.patreon.com/luckycloverdev" target="_blank" class="btn">
-					Patreon
-				</a>
-				<a href="https://www.twitch.tv/lucky_clover03" target="_blank" class="btn">
-					Twitch
-				</a>
-				<a href="https://twitter.com/LuckyCloverDev" target="_blank" class="btn">
-					Twitter
+				<a href="https://discord.gg/B8dTyfa" target="_blank" class="btn">
+					Discord
 				</a>
 			</div>
 		</div>
