--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<a href="/comm-info/">Commissions</a>
 		<a href="/housefire-studios/">Housefire Studios</a>
 		<a href="/contact-me/">Contact</a>
+		<a href="/CloverWeb/Jeremiah Dobes - Resume.pdf">Resume</a>
 		<a href="/about/">About</a>
 	</div>
 	<section class="banner">
@@ -46,9 +47,11 @@
 			</div>
 		</div>
 	</section>
-	<h1>
-		This is a work in progress, move along!<br>>:)
-	</h1>
+	<section class="main-section">
+		<h1>
+			This is a work in progress, move along!<br>>:)
+		</h1>
+	</section>
 </body>
 
 </html>
