--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<a href="/comm-info/">Commissions</a>
 		<a href="/housefire-studios/">Housefire Studios</a>
 		<a href="/contact-me/">Contact</a>
-		<a href="/Jeremiah Dobes - Resume.pdf">Resume</a>
+		<a href="/Jeremiah Dobes - Resume.pdf", target="_blank", rel="noopener noreferrer">Resume</a>
 		<a href="/about/">About</a>
 	</div>
 	<section class="banner">
