deleted:    about/index.html 	deleted:    comm-info/index.html 	deleted:    contact-me/index.html 	deleted:    housefire-studios/index.html 	modified:   index.html 	deleted:    src/css/studio-style.css 	modified:   src/css/stylemain.css

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 	<meta charset="utf-8">
 	<title>CloverWeb</title>
 	<meta name="description" content="The Official Site of Lucky Clover">
-	<link rel="stylesheet" type="text/css" href="/src/css/stylemain.css">
+	<link rel="stylesheet" type="text/css" href="src/css/stylemain.css">
 </head>
 
 <body>
 	<div class="navbar">
 		<a class="active">Home</a>
-		<a href="/comm-info/">Commissions</a>
-		<a href="/housefire-studios/">Housefire Studios</a>
-		<a href="/contact-me/">Contact</a>
-		<a href="/Jeremiah Dobes - Resume.pdf", target="_blank", rel="noopener noreferrer">Resume</a>
-		<a href="/about/">About</a>
+		<a href="comm-info/">Commissions</a>
+		<a href="housefire-studios/">Housefire Studios</a>
+		<a href="contact-me/">Contact</a>
+		<a href="Jeremiah Dobes - Resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
+		<a href="about/">About</a>
 	</div>
 	<section class="banner">
 		<div class="banner-inner">
@@ -26,32 +26,39 @@
 				Official Site of Lucky Clover
 			</h3>
 			<div class="btn-line">
-				<a href="https://github.com/LuckyCloverDev" target="_blank" class="btn">
+				<a href="https://github.com/LuckyCloverDev" target="_blank" class="btn" rel="noopener noreferrer">
 					Github
 				</a>
-				<a href="https://www.instagram.com/lucky.clover.arts/" target="_blank" class="btn">
+				<a href="https://www.instagram.com/lucky.clover.arts/" target="_blank" class="btn" rel="noopener noreferrer">
 					Instagram
 				</a>
-				<a href="https://luckycloverdev.itch.io/" target="_blank" class="btn">
+				<a href="https://luckycloverdev.itch.io/" target="_blank" class="btn" rel="noopener noreferrer">
 					Itch.io
 				</a>
-				<a href="https://www.patreon.com/luckycloverdev" target="_blank" class="btn">
+				<a href="https://www.patreon.com/luckycloverdev" target="_blank" class="btn" rel="noopener noreferrer">
 					Patreon
 				</a>
-				<a href="https://www.twitch.tv/lucky_clover03" target="_blank" class="btn">
+				<a href="https://www.twitch.tv/lucky_clover03" target="_blank" class="btn" rel="noopener noreferrer">
 					Twitch
 				</a>
-				<a href="https://twitter.com/LuckyCloverDev" target="_blank" class="btn">
+				<a href="https://twitter.com/LuckyCloverDev" target="_blank" class="btn" rel="noopener noreferrer">
 					Twitter
 				</a>
 			</div>
 		</div>
 	</section>
 	<section class="main-section">
-		<h1>
-			This is a work in progress, move along!<br>>:)
-		</h1>
+		<FadeInSection>
+			<h1>
+				This is a work in progress, move along!<br>>:)
+			</h1>
+		</FadeInSection>
 	</section>
+	<FadeInSection>
+		<h1>
+			Hello
+		</h1>
+	</FadeInSection>
 </body>
 
 </html>
