Continued restarting site

--- a/index.html
+++ b/index.html
@@ -3,102 +3,38 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Jeremiah Dobes | Front-End Web Developer</title>
+	<title>Lucky Clover Dev | Home</title>
 	<meta name="description" content="The Official Site of Lucky Clover">
 	<link rel="stylesheet" type="text/css" href="src/css/stylemain.css">
 	<script src="src/js/main-script.js"></script>
-	<link rel="icon" href="src/images/LuckyCloverIcon.png">
+	<link rel="icon" href="src\images\LuckyCloverDev-woName.png">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital@0;1&display=swap" rel="stylesheet">
 </head>
 
-<body>
-	<!-- <div id="preloader">
-		<div id="load-animation"></div>
-	</div> -->
-	<header>
-		<nav>
-			<ul>
-				<li><a class="active">Home</a></li>
-				<li><a href="comm-info/">Commissions</a></li>
-				<li><a href="housefire-studios/">Housefire Studios</a></li>
-				<li><a href="contact-me/">Contact</a></li>
-				<li><a href="Jeremiah Dobes - Resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
-				<li><a href="about/">About</a></li>
-			</ul>
-		</nav>
+<body class="main-content">
+	<header class="navbar">
+		<a>TEST HERE</a>
+		<a href="https://luckycloverdev.itch.io/">Games</a>
+		<a href="/">HOME</a>
+		<a href="aboutme/">About Me</a>
+		<a>TEST HERE</a>
 	</header>
-	<section class="banner">
-		<div class="banner-inner">
-			<h1>
-				CloverWeb
-			</h1>
-			<h3>
-				Official Site of Lucky Clover
-			</h3>
-			<div class="btn-line">
-				<a href="https://github.com/LuckyCloverDev" target="_blank" class="btn" rel="noopener noreferrer">
-					Github
-				</a>
-				<a href="https://www.instagram.com/lucky.clover.arts/" target="_blank" class="btn" rel="noopener noreferrer">
-					Instagram
-				</a>
-				<a href="https://luckycloverdev.itch.io/" target="_blank" class="btn" rel="noopener noreferrer">
-					Itch.io
-				</a>
-				<a href="https://www.patreon.com/luckycloverdev" target="_blank" class="btn" rel="noopener noreferrer">
-					Patreon
-				</a>
-				<a href="https://www.twitch.tv/lucky_clover03" target="_blank" class="btn" rel="noopener noreferrer">
-					Twitch
-				</a>
-				<a href="https://twitter.com/LuckyCloverDev" target="_blank" class="btn" rel="noopener noreferrer">
-					Twitter
-				</a>
-			</div>
+
+	<div class="site-content">
+		<div>
+			TESTING
 		</div>
-	</section>
-	<section class="main-section">
-		<h1>
-			This is a work in progress, move along!<br>>:)
-		</h1>
-		<div class="tablist">
-			<div class="tab-header">
-				<div class="active tab">
-					Bio
-				</div>
-				<div class="tab">
-					About
-				</div>
-				<div class="tab">
-					Services
-				</div>
-				<div class="tab">
-					Contact
-				</div>
-			</div>
-			<div class="tab-indicator"></div>
-			<div class="tab-body">
-				<div class="active tab-content">
-					<h2>BIOGRAPHY</h2>
-					<p1>Lorem ipsum yadda yadda</p1>
-				</div>
-				<div class="tab-content">
-					<h2>ABOUT</h2>
-					<p1>Lorem ipsum yadda yadda</p1>
-				</div>
-				<div class="tab-content">
-					<h2>SERVICES</h2>
-					<p1>Lorem ipsum yadda yadda</p1>
-				</div>
-				<div class="tab-content">
-					<h2>CONTACT</h2>
-					<p1>Lorem ipsum yadda yadda</p1>
-				</div>
-			</div>
-		</div>
-	</section>
-	<h1>
-		Hello
-	</h1>
+		<h1>HEADER</h1>
+		<h2>SUBHEADER</h2>
+		<h3>SUB-SUBHEADER</h3>
+		<p>PARAGRAPH</p>
+	</div>
+
+	<footer>
+		<div><b>©Lucky Clover Dev 2023. All Rights Reserved</b></div>
+	</footer>
 </body>
 
 </html>
