Added icons for links, edited page style, layout

--- a/index.html
+++ b/index.html
@@ -15,25 +15,37 @@
 
 <body class="main-content">
 	<header class="navbar">
-		<a>TEST HERE</a>
-		<a href="https://luckycloverdev.itch.io/">Games</a>
-		<a href="/">HOME</a>
-		<a href="aboutme/">About Me</a>
-		<a>TEST HERE</a>
+		<a href="/"><b>Home</b></a>
+		<a href="https://luckycloverdev.itch.io/"><b>Games</b></a>
+		<a href="aboutme/"><b>About Me</b></a>
 	</header>
+	<a href="/"><img src="src\images\LuckyCloverDev-woName.png" alt="Lucky Clover Icon" title="Lucky Clover Icon" class="icon-image"></a>
 
 	<div class="site-content">
-		<div>
-			TESTING
+		<h1>Lucky Clover Dev</h1>
+		<div class="page-break"></div>
+		<div class="body-content">
+			<h2>SUBHEADER</h2>
+			<br>
+			<h3>SUB-SUBHEADER</h3>
+			<p>PARAGRAPH</p>
 		</div>
-		<h1>HEADER</h1>
-		<h2>SUBHEADER</h2>
-		<h3>SUB-SUBHEADER</h3>
-		<p>PARAGRAPH</p>
+		
 	</div>
 
 	<footer>
-		<div><b>©Lucky Clover Dev 2023. All Rights Reserved</b></div>
+		<div class="links">
+			<a target="_blank" href="https://discord.gg/B8dTyfa">
+				<img src="src\images\discordIcon.svg" class="svg-icon">
+			</a>
+			<a target="_blank" href="https://twitter.com/LuckyCloverDev">
+				<img src="src\images\twitterIcon.svg" class="svg-icon">
+			</a>
+			<a target="_blank" href="https://www.youtube.com/@luckycloverdev">
+				<img src="src\images\youtubeIcon.svg" class="svg-icon">
+			</a>
+		</div>
+		<div>©Lucky Clover Dev 2023. All Rights Reserved</div>
 	</footer>
 </body>
 
