Added the other webpages

--- a/hfs/index.html
+++ b/hfs/index.html
@@ -3,11 +3,11 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Lucky Clover Dev | Home</title>
+	<title>Lucky Clover Dev | Housefire Studios</title>
 	<meta name="description" content="The Official Site of Lucky Clover">
-	<link rel="stylesheet" type="text/css" href="src/css/stylemain.css">
+	<link rel="stylesheet" type="text/css" href="../src/css/stylemain.css">
 	<script src="src/js/main-script.js"></script>
-	<link rel="icon" href="src\images\LuckyCloverDev-woName.png">
+	<link rel="icon" href="..\src\images\LuckyCloverDev-woName.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital@0;1&display=swap" rel="stylesheet">
@@ -15,22 +15,30 @@
 
 <body class="main-content">
 	<header class="navbar">
-		<a href="/"><b>Home</b></a>
+		<a href="../"><b>Home</b></a>
 		<a target="_blank" href="https://luckycloverdev.itch.io/"><b>Games</b></a>
-		<a href="hfs/"><b>Game Studio</b></a>
-		<a href="dotcafe/"><b>Café Dot</b></a>
-		<a href="aboutme/"><b>About Me</b></a>
+		<a href="../hfs/"><b>Game Studio</b></a>
+		<a href="../dotcafe/"><b>Café Dot</b></a>
+		<a href="../aboutme/"><b>About Me</b></a>
 	</header>
-	<a href="/"><img src="src\images\LuckyCloverDev-woName.png" alt="Lucky Clover Icon" title="Lucky Clover Icon" class="icon-image"></a>
+	<a href="/"><img src="..\src\images\LuckyCloverDev-woName.png" alt="Lucky Clover Icon" title="Lucky Clover Icon" class="icon-image"></a>
 
 	<div class="site-content">
-		<h1>Lucky Clover Dev</h1>
+		<img src="../src/images/Housefire-White.png" alt="Housefire Studios Logo" title="Logo by Robin, B.R." style="height: 25%; width: 25%;">
 		<div class="page-break"></div>
 		<div class="body-content">
-			<h2>SUBHEADER</h2>
-			<br>
-			<h3>SUB-SUBHEADER</h3>
-			<p>PARAGRAPH</p>
+			<p class="body-text">
+				Housefire Studios is a game studio
+				<br><br>
+				<br><br>
+				<br><br>
+				<br><br>
+				<br><br>
+				<br><br>
+				<br><br>
+				<br><br>
+				Bwomp
+			</p>
 		</div>
 		
 	</div>
@@ -38,19 +46,19 @@
 	<footer>
 		<div class="links">
 			<a target="_blank" href="https://discord.gg/B8dTyfa">
-				<img src="src\images\discordIcon.svg" class="svg-icon">
+				<img src="..\src\images\discordIcon.svg" class="svg-icon">
 			</a>
 			<a target="_blank" href="https://twitter.com/LuckyCloverDev">
-				<img src="src\images\twitterIcon.svg" class="svg-icon">
+				<img src="..\src\images\twitterIcon.svg" class="svg-icon">
 			</a>
 			<a target="_blank" href="https://www.youtube.com/@luckycloverdev">
-				<img src="src\images\youtubeIcon.svg" class="svg-icon">
+				<img src="..\src\images\youtubeIcon.svg" class="svg-icon">
 			</a>
 			<a target="_blank" href="https://ko-fi.com/luckycloverdev">
-				<img src="src\images\kofiIcon.svg" class="svg-icon">
+				<img src="..\src\images\kofiIcon.svg" class="svg-icon">
 			</a>
 			<a target="_blank" href="https://www.patreon.com/luckycloverdev">
-				<img src="src\images\patreonIcon.svg" class="svg-icon">
+				<img src="..\src\images\patreonIcon.svg" class="svg-icon">
 			</a>
 		</div>
 		<div>©Lucky Clover Dev 2023. All Rights Reserved</div>
