Finished adding all other pages

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -6,7 +6,7 @@
 	<title>Lucky Clover Dev | About Me</title>
 	<meta name="description" content="The Official Site of Lucky Clover">
 	<link rel="stylesheet" type="text/css" href="../src/css/stylemain.css">
-	<script src="src/js/main-script.js"></script>
+	<script src="../src/js/main-script.js"></script>
 	<link rel="icon" href="..\src\images\LuckyCloverDev-woName.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,6 +24,7 @@
 	<a href="/"><img src="..\src\images\LuckyCloverDev-woName.png" alt="Lucky Clover Icon" title="Lucky Clover Icon" class="icon-image"></a>
 
 	<div class="site-content">
+		<div class="page-break"></div>
 		<h1>About Me</h1>
 		<div class="page-break"></div>
 		<div class="body-content">
