--- a/hfs/index.html
+++ b/hfs/index.html
@@ -6,7 +6,7 @@
 	<title>Lucky Clover Dev | Housefire Studios</title>
 	<meta name="description" content="The Official Site of Lucky Clover">
 	<link rel="stylesheet" type="text/css" href="../src/css/stylemain.css">
-	<script src="src/js/main-script.js"></script>
+	<script src="../src/js/main-script.js"></script>
 	<link rel="icon" href="..\src\images\LuckyCloverDev-woName.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,23 +24,29 @@
 	<a href="/"><img src="..\src\images\LuckyCloverDev-woName.png" alt="Lucky Clover Icon" title="Lucky Clover Icon" class="icon-image"></a>
 
 	<div class="site-content">
+		<div class="page-break"></div>
 		<img src="../src/images/Housefire-White.png" alt="Housefire Studios Logo" title="Logo by Robin, B.R." style="height: 25%; width: 25%;">
 		<div class="page-break"></div>
 		<div class="body-content">
 			<p class="body-text">
-				Housefire Studios is a game studio
+				Housefire Studios is a game studio I started back in 2017. When it started out it was nameless,
+				just me working on my own, learning to program and exploring my own interest in game development.
+				As time went on, I brought on a few of my personal friends to help me and recruited a couple
+				members from various places to help out. After awhile, these members eventually lost interest and
+				left the team to continue with their own projects.
 				<br><br>
-				<br><br>
-				<br><br>
-				<br><br>
-				<br><br>
-				<br><br>
-				<br><br>
-				<br><br>
-				Bwomp
+				Once everything settled down, I was left with myself, Robin, B.R., and Chan as the members of
+				Housefire Studios. I took the very first project I ever made, a game called "Lumpia and the Orb of
+				Power" made in Scratch, and developed a story for it, redesigned the main character, and we began
+				our work on the game that came from it: Shadow of a Doubt
 			</p>
 		</div>
-		
+		<div class="page-break"></div>
+		<h1>Shadow of a Doubt Characters</h1>
+		<div class="page-break"></div>
+		<img src="..\src\images\LumpiaCharacterSheet.png" alt="Lumpia Reference Sheet" title="Lumpia Reference Sheet by Robin, B.R." style="height: 25%; width: 25%; margin-right: 0.25em; border-radius: 1em; outline: 2px solid #323e4f;">
+		<img src="..\src\images\togebean.png" alt="Toge Concept" title="Toge Concept by Robin, B.R." style="height: 25%; width: 25%; margin-right: 0.25em; border-radius: 1em; outline: 2px solid #323e4f;">
+		<img src="..\src\images\ArchieCharacterDesign-WIP3.png" alt="Archie Reference Sheet" title="Archie Reference Sheet by Robin, B.R." style="height: 50%; width: 50%; margin-top: 0.5em; border-radius: 1em; outline: 2px solid #323e4f;">
 	</div>
 
 	<footer>
