--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 	<a href="/"><img src="src\images\LuckyCloverDev-woName.png" alt="Lucky Clover Icon" title="Lucky Clover Icon" class="icon-image"></a>
 
 	<div class="site-content">
+		<div class="page-break"></div>
+		<img src="..\src\images\LuckyCloverDev-woName.png" alt="Lucky Clover Logo" title="Logo by Lucky Clover Dev" style="height: 25%; width: 25%;">
 		<h1>Lucky Clover Dev</h1>
 		<div class="page-break"></div>
 		<div class="body-content">
-			<h2>SUBHEADER</h2>
-			<br>
-			<h3>SUB-SUBHEADER</h3>
-			<p>PARAGRAPH</p>
+			<p class="body-text">
+				Paragraph
+			</p>
 		</div>
-		
 	</div>
 
 	<footer>
