--- a/dotcafe/index.html
+++ b/dotcafe/index.html
@@ -6,7 +6,7 @@
 	<title>Lucky Clover Dev | Café Dot</title>
 	<meta name="description" content="The Official Site of Lucky Clover">
 	<link rel="stylesheet" type="text/css" href="../src/css/stylemain.css">
-	<script src="src/js/main-script.js"></script>
+	<script src="../src/js/main-script.js"></script>
 	<link rel="icon" href="..\src\images\LuckyCloverDev-woName.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,6 +24,7 @@
 	<a href="/"><img src="..\src\images\LuckyCloverDev-woName.png" alt="Lucky Clover Icon" title="Lucky Clover Icon" class="icon-image"></a>
 
 	<div class="site-content">
+		<div class="page-break"></div>
 		<img src="..\src\images\Cafe_Dot_Logo.png" alt="Café Dot Logo" title="Art by TofuPixel, Logo by Mootabisque" style="height: 25%; width: 25%; border-radius: 2em; outline: 2px solid #ffffeb;">
 		<div class="page-break"></div>
 		<div class="body-content">
