Fixed Cafe Dot name errors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<a href="/"><b>Home</b></a>
 		<a target="_blank" href="https://luckycloverdev.itch.io/"><b>Games</b></a>
 		<a href="hfs/"><b>Game Studio</b></a>
-		<a href="dotcafe/"><b>Café Dot</b></a>
+		<a href="cafedot/"><b>Café Dot</b></a>
 		<a href="aboutme/"><b>About Me</b></a>
 	</header>
 	<a href="/"><img src="src\images\LuckyCloverDev-woName.png" alt="Lucky Clover Icon" title="Lucky Clover Icon" class="icon-image"></a>
