Fixed navbar scrolling

--- a/cafedot/index.html
+++ b/cafedot/index.html
@@ -25,7 +25,7 @@
 
 	<div class="site-content">
 		<div class="page-break"></div>
-		<img src="..\src\images\Cafe_Dot_Logo.png" alt="Café Dot Logo" title="Art by TofuPixel, Logo by Mootabisque" style="height: 25%; width: 25%; border-radius: 2em; outline: 2px solid #ffffeb;">
+		<img src="..\src\images\Cafe_Dot_Logo.png" alt="Café Dot Logo" title="Art by TofuPixel, Logo by Mootabisque" class="main-img" style="height: 25%; width: 25%; border-radius: 2em; outline: 2px solid #ffffeb;">
 		<div class="page-break"></div>
 		<div class="body-content">
 			<p class="body-text">
@@ -39,7 +39,7 @@
 			</p>
 		</div>
 		<div class="page-break"></div>
-		<img src="..\src\images\matchaReference.png" alt="Matcha Reference Photo" title="Art by Graylure" style="height: 25%; width: 25%; border-radius: 2em; outline: 2px solid #323e4f;">
+		<img src="..\src\images\matchaReference.png" alt="Matcha Reference Photo" title="Art by Graylure" class="main-img" style="height: 25%; width: 25%; border-radius: 2em; outline: 2px solid #323e4f;">
 		<div class="page-break"></div>
 		<div class="body-content">
 			<p class="body-text">
