--- a/hfs/index.html
+++ b/hfs/index.html
@@ -25,7 +25,7 @@
 
 	<div class="site-content">
 		<div class="page-break"></div>
-		<img src="../src/images/Housefire-White.png" alt="Housefire Studios Logo" title="Logo by Robin, B.R." style="height: 25%; width: 25%;">
+		<img src="../src/images/Housefire-White.png" alt="Housefire Studios Logo" title="Logo by Robin, B.R." class="main-img" style="height: 25%; width: 25%;">
 		<div class="page-break"></div>
 		<div class="body-content">
 			<p class="body-text">
