--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<div class="site-content">
 		<div class="page-break"></div>
-		<img src="..\src\images\LuckyCloverDev-woName.png" alt="Lucky Clover Logo" title="Logo by Lucky Clover Dev" style="height: 25%; width: 25%;">
+		<img src="..\src\images\LuckyCloverDev-woName.png" alt="Lucky Clover Logo" title="Logo by Lucky Clover Dev" class="main-img" style="height: 25%; width: 25%;">
 		<h1>Lucky Clover Dev</h1>
 		<div class="page-break"></div>
 		<div class="body-content">
