--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<title>Lucky Clover Dev | Home</title>
 	<meta name="description" content="The Official Site of Lucky Clover">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" type="text/css" href="src/css/stylemain.css">
 	<script src="src/js/main-script.js"></script>
 	<link rel="icon" href="src\images\LuckyCloverDev-woName.png">
