Properly linked Comics page on Cafe Dot page

--- a/cafedot/index.html
+++ b/cafedot/index.html
@@ -39,7 +39,7 @@
 			</p>
 		</div>
 		<div class="page-break"></div>
-		<img src="..\src\images\matchaReference.png" alt="Matcha Reference Photo" title="Art by Graylure" class="main-img" style="height: 25%; width: 25%; border-radius: 2em; outline: 2px solid #323e4f;">
+		<a href="/cafedot/comics/"><img src="..\src\images\matchaReference.png" alt="Matcha Reference Photo" title="Art by Graylure" class="main-img" style="height: 25%; width: 25%; border-radius: 2em; outline: 2px solid #323e4f;"></a>
 		<div class="page-break"></div>
 		<div class="body-content">
 			<p class="body-text">
@@ -51,6 +51,8 @@
 		</div>
 		<div class="page-break"></div>
 		<h1><a target="_blank" href="https://discord.gg/cafedot">Come join Café Dot!</a></h1>
+		<div class="page-break"></div>
+		<h1><a href="/cafedot/comics/">Read the Café Dot comics here!</a></h1>
 	</div>
 
 	<footer>
