--- a/cafedot/comics/index.html
+++ b/cafedot/comics/index.html
@@ -25,9 +25,9 @@
 
 	<div class="site-content">
 		<div class="w3-content w3-display-container">
-			<img class="mySlides" src="Comic_0.png">
-			<img class="mySlides" src="Comic_1.png">
-			<img class="mySlides" src="Comic_2.png" onload="showDivs(1)">
+			<img class="mySlides" src="Comic_0.png" onload="showDivs(1)">
+			<!--<img class="mySlides" src="Comic_1.png">
+			<img class="mySlides" src="Comic_2.png">-->
 			<div class="w3-center w3-display-bottommiddle" style="width:100%">
 				<div class="w3-left" onclick="plusDivs(-1)">&#10094;</div>
 				<div class="w3-right" onclick="plusDivs(1)">&#10095;</div>
