Fixed comics page title

--- a/cafedot/comics/index.html
+++ b/cafedot/comics/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Lucky Clover Dev | Café Dot</title>
+	<title>Lucky Clover Dev | Café Dot Comics</title>
 	<meta name="description" content="The Official Site of Lucky Clover">
 	<link rel="stylesheet" type="text/css" href="../../src/css/stylemain.css">
 	<script src="../../src/js/main-script.js"></script>
